--- a/source/Drey.Server.Core/Drey.Server.Core.csproj
+++ b/source/Drey.Server.Core/Drey.Server.Core.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Drey.Server.Core.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
