--- a/source/Drey.Server.Hubs/Drey.Server.Hubs.csproj
+++ b/source/Drey.Server.Hubs/Drey.Server.Hubs.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Drey.Server.Hubs.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
