Beginning of refactor to load control panel, then manage apps in the control panel domain.

--- a/source/Drey/Drey.csproj
+++ b/source/Drey/Drey.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CertificateValidation\AuthorityIssuedServerCertificateValidation.cs" />
     <Compile Include="CertificateValidation\ICertificateValidation.cs" />
     <Compile Include="CertificateValidation\SelfSignedServerCertificateValidation.cs" />
+    <Compile Include="ControlPanelServiceControl.cs" />
     <Compile Include="DreyConstants.cs" />
     <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
