--- a/source/Drey.Server.Hubs/Drey.Server.Hubs.csproj
+++ b/source/Drey.Server.Hubs/Drey.Server.Hubs.csproj
@@ -64,8 +64,10 @@
     <Compile Include="Directors\Director.cs" />
     <Compile Include="Directors\IListLogsDirector.cs" />
     <Compile Include="Directors\IOpenLogFileDirector.cs" />
+    <Compile Include="Directors\IRecycleClientDirector.cs" />
     <Compile Include="Directors\ListLogsDirector.cs" />
     <Compile Include="Directors\OpenLogFileDirector.cs" />
+    <Compile Include="Directors\RecycleClientDirector.cs" />
     <Compile Include="Hubs\IRuntimeClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Hubs\RuntimeHub.cs" />
