--- a/source/Drey.Configuration/packages.config
+++ b/source/Drey.Configuration/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="net451" />
   <package id="bootstrap" version="3.3.5" targetFramework="net451" />
   <package id="Dapper" version="1.42" targetFramework="net451" />
   <package id="FluentMigrator" version="1.6.0" targetFramework="net451" />
@@ -11,7 +12,8 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
-  <package id="Nancy" version="1.3.0" targetFramework="net451" />
+  <package id="Nancy" version="1.4.1" targetFramework="net451" />
+  <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net451" />
   <package id="Nancy.Hosting.Self" version="1.3.0" targetFramework="net451" />
   <package id="Nancy.Validation.DataAnnotations" version="1.3.0" targetFramework="net451" />
   <package id="Nancy.Viewengines.Razor" version="1.3.0" targetFramework="net451" />
