--- a/source/Drey.Configuration/packages.config
+++ b/source/Drey.Configuration/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
+  <package id="Mono.Data.Sqlite.Portable" version="1.0.3.5" targetFramework="net451" />
   <package id="Nancy" version="1.4.1" targetFramework="net451" />
   <package id="Nancy.Bootstrappers.Autofac" version="1.4.1" targetFramework="net451" />
   <package id="Nancy.Hosting.Self" version="1.3.0" targetFramework="net451" />
@@ -19,5 +20,4 @@
   <package id="Nancy.Viewengines.Razor" version="1.3.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="NuGet.Core" version="2.8.6" targetFramework="net451" />
-  <package id="System.Data.SQLite.Core" version="1.0.98.1" targetFramework="net451" />
 </packages>
