--- a/source/Drey.Runtime/packages.config
+++ b/source/Drey.Runtime/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NLog" version="4.1.2" targetFramework="net451" />
   <package id="Topshelf" version="3.2.0" targetFramework="net451" />
+  <package id="Topshelf.Linux" version="1.0.12.11" targetFramework="net451" />
 </packages>
