--- a/samples/Samples.AppOne/Samples.AppOne.csproj
+++ b/samples/Samples.AppOne/Samples.AppOne.csproj
@@ -57,13 +57,13 @@
   <Import Project="$(MSBuildCommunityTasksPath)\MSBuild.Community.Tasks.targets" />
   <Target Name="BeforeBuild">
     <RemoveDir Directories="$(OutputPath)" />
-    <RemoveDir Directories="$(SolutionDir)\Runtime\hoarde\$(RootNamespace).$(Version)" />
+    <RemoveDir Directories="$(SolutionDir)\Runtime\Hoarde\$(RootNamespace).$(Version)" />
   </Target>
   <Target Name="AfterBuild">
-    <MakeDir Directories="$(SolutionDir)\Runtime\hoarde\$(RootNamespace).$(Version)" />
+    <MakeDir Directories="$(SolutionDir)\Runtime\Hoarde\$(RootNamespace).$(Version)" />
     <ItemGroup>
       <BinDirectoryFiles Include="$(OutputPath)**\*.*" Exclude="**\Drey.dll;**\Drey.pdb" />
     </ItemGroup>
-    <Copy SourceFiles="@(BinDirectoryFiles)" DestinationFiles="@(BinDirectoryFiles->'$(SolutionDir)\Runtime\hoarde\$(RootNamespace).$(Version)\%(RecursiveDir)%(Filename)%(Extension)')" />
+    <Copy SourceFiles="@(BinDirectoryFiles)" DestinationFiles="@(BinDirectoryFiles->'$(SolutionDir)\Runtime\Hoarde\$(RootNamespace).$(Version)\%(RecursiveDir)%(Filename)%(Extension)')" />
   </Target>
 </Project>
